apps/lite/ui/src/routes/project/$id/workspace/OutlineTree/OutlineTree.module.css
.section {
	padding: 6px;
	border-radius: var(--radius-l);
	background-color: var(--bg-2);
}

.tree {
	&:focus {
		/* The focus state is displayed on the item row instead. */
		outline: none;
	}
}

.resizeHandle {
	height: 1px;
	background-color: var(--border-3);

	&[data-separator="hover"],
	&[data-separator="active"] {
		background-color: var(--border-2);
	}
}

.uncommittedChangesPanel {
	display: grid;
}

.uncommittedChangesContainer {
	padding-inline: var(--panel-padding-inline);
	padding-block: var(--panel-padding-block);
}

.stacks {
	display: flex;
	row-gap: 12px;
	flex-direction: column;
	padding-inline: var(--panel-padding-inline);
	padding-block: var(--panel-padding-block);
	scroll-padding-block: var(--panel-padding-block);
	scroll-padding-inline: var(--panel-padding-inline);
}

.segments {
	display: flex;
	flex-direction: column;
}

.segmentParentItemRow:last-child {
	height: 8px;
	min-height: auto;
	overflow: hidden;
}

.stack {
	display: flex;
	flex-direction: column;
	padding-bottom: 0;
}

